--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ dependencies:
 
 test:
   pre:
+    - docker run -d --name gogreen-mysql -e MYSQL_ROOT_PASSWORD=password mysql:latest
     - ansible-playbook tests/setup-test-dependencies.yml
   post:
     - docker run -d -p 8080:8080 --volumes /tmp/hippo-distributions:/opt/cms/distributions:ro --link gogreen-mysql:mysql -e HIPPO_CONTENTSTORE_USERNAME="gogreen" -e HIPPO_CONTENTSTORE_PASSWORD="password" -e HIPPO_CONTENTSTORE_URL="jdbc:mysql://\$MYSQL_PORT_3306_TCP_ADDR:\$MYSQL_PORT_3306_TCP_PORT/gogreen?characterEncoding=utf8" hippo-tomcat_trusty:$CIRCLE_SHA1; sleep 60
