--- a/tests/setup-test-dependencies.yml
+++ b/tests/setup-test-dependencies.yml
@@ -3,6 +3,12 @@
   hosts: localhost
   sudo: True
   tasks:
+    - name: Ensure python-apt is installed
+      command: >
+        apt-get install python-apt -y -q
+        creates=/usr/share/doc/python-apt
+      sudo: yes
+
     - name: Install MySQL and configure a test database instance
       include: install-mysql.yml
 
