--- a/circle.yml
+++ b/circle.yml
@@ -6,9 +6,15 @@ machine:
 
 dependencies:
   pre:
-    - pip install ansible
+    # Install Ansible
+    - sudo apt-get install software-properties-common
+    - sudo apt-add-repository ppa:ansible/ansible
+    - sudo apt-get update
+    - sudo apt-get install ansible
+
+    # - pip install ansible
     - docker build  -f tests/Dockerfile-ubuntu14.04 -t hippo-tomcat_trusty:$CIRCLE_SHA1 .
-    - sudo apt-get install python-apt -y -q
+    # - sudo apt-get install python-apt -y -q
 
 test:
   pre:
