--- a/circle.yml
+++ b/circle.yml
@@ -7,10 +7,10 @@ machine:
 dependencies:
   pre:
     # Install Ansible
-    - sudo apt-get install software-properties-common
-    - sudo apt-add-repository ppa:ansible/ansible
-    - sudo apt-get update
-    - sudo apt-get install ansible
+    - sudo apt-get install software-properties-common -y -q
+    - sudo apt-add-repository ppa:ansible/ansible -y -q
+    - sudo apt-get update -y -q
+    - sudo apt-get install ansible -y -q
 
     # - pip install ansible
     - docker build  -f tests/Dockerfile-ubuntu14.04 -t hippo-tomcat_trusty:$CIRCLE_SHA1 .
