No "-q" option on apt-add-repository apparently

--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
   pre:
     # Install Ansible
     - sudo apt-get install software-properties-common -y -q
-    - sudo apt-add-repository ppa:ansible/ansible -y -q
+    - sudo apt-add-repository ppa:ansible/ansible -y
     - sudo apt-get update -y -q
     - sudo apt-get install ansible -y -q
 
