Testing move of db initiation to Docker volume on MySQL container

--- a/tests/setup-test-dependencies.yml
+++ b/tests/setup-test-dependencies.yml
@@ -3,8 +3,8 @@
   hosts: localhost
   sudo: True
   tasks:
-    - name: Install MySQL and configure a test database instance
-      include: install-mysql.yml
+    #- name: Install MySQL and configure a test database instance
+    #  include: install-mysql.yml
 
     - name: Download Hippo demo distribution
       include: download-hippo-gogreen.yml
