--- a/circle.yml
+++ b/circle.yml
@@ -4,20 +4,13 @@ machine:
 
 dependencies:
   pre:
-    # Install Ansible
-    - sudo apt-get install software-properties-common -y -q
-    - sudo apt-add-repository ppa:ansible/ansible -y
-    - sudo apt-get update -y -q
-    - sudo apt-get install ansible -y -q
-
-    # - pip install ansible
     - docker build  -f tests/Dockerfile-ubuntu14.04 -t hippo-tomcat_trusty:$CIRCLE_SHA1 .
-    # - sudo apt-get install python-apt -y -q
 
 test:
   pre:
     - docker run -d -p 3307:3306 --name gogreen-mysql -e MYSQL_ROOT_PASSWORD=password mysql:latest --volume tests/database-init-scripts:/docker-entrypoint-initdb.d:ro
-    - ansible-playbook tests/setup-test-dependencies.yml
+    - mkdir /tmp/hippo-distributions
+    - wget https://github.com/daniel-rhoades/hippo-gogreen/releases/download/v0.1/gogreen-0.1.0-SNAPSHOT-distribution.tar.gz -O /tmp/hippo-distributions/gogreen-0.1.0-SNAPSHOT-distribution.tar.gz
   post:
     - docker run -d -p 8080:8080 --volume /tmp/hippo-distributions:/opt/cms/distributions:ro --link gogreen-mysql:mysql -e HIPPO_CONTENTSTORE_USERNAME="gogreen" -e HIPPO_CONTENTSTORE_PASSWORD="password" -e HIPPO_CONTENTSTORE_URL="jdbc:mysql://\$MYSQL_PORT_3306_TCP_ADDR:\$MYSQL_PORT_3306_TCP_PORT/gogreen?characterEncoding=utf8" hippo-tomcat_trusty:$CIRCLE_SHA1; sleep 60
-    - curl --retry 10 --retry-delay 5 -v http://localhost:8080/cms
+    - curl --retry 10 --retry-delay 5 -v http://localhost:8080/site
