--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
 
 test:
   pre:
-    - docker run -d -p 3307:3306 --name gogreen-mysql -e MYSQL_ROOT_PASSWORD=password mysql:latest --volume tests/database-init-scripts:/docker-entrypoint-initdb.d:ro
+    - docker run -d -p 3307:3306 --name gogreen-mysql -e MYSQL_ROOT_PASSWORD=password --volume tests/database-init-scripts:/docker-entrypoint-initdb.d:ro mysql:latest
     - mkdir /tmp/hippo-distributions
     - wget https://github.com/daniel-rhoades/hippo-gogreen/releases/download/v0.1/gogreen-0.1.0-SNAPSHOT-distribution.tar.gz -O /tmp/hippo-distributions/gogreen-0.1.0-SNAPSHOT-distribution.tar.gz
   post:
